--- a/styles.css
+++ b/styles.css
@@ -1249,7 +1249,9 @@ body {
 }
 
 .restaurant-info h1 {
+    font-family: 'Playfair Display', serif;
     font-size: 2.5rem;
+    font-weight: 700;
     color: #2d5016;
     margin-bottom: 1rem;
 }
